okp4-gatsby/src/assets/styles/pages/explore/_dataverseGateways.scss
@use "sass:math";

main.dataverseGateways {
  min-height: 100vh;

  .dataverse_gateways {
    .wrapper {
      position: relative;
      max-width: 1920px;
    }

    .dg__first_page {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 0 auto;
      padding: 300px 15px 0;
      text-align: center;

      @include media-bp-down(lg) {
        padding-top: 130px;
      }

      .introduction {
        margin: 73px 0 116px;
        font-size: 35px;
        font-weight: 500;
        line-height: 42px;
        text-align: center;
        opacity: 0.4;

        @media screen and (max-width: 1440px) {
          margin: 69px 0 121px;
        }
        @include media-bp-down(lg) {
          font-size: 22px;
          line-height: 1.5;
          margin: 60px 0 30px;
        }
      }

      .keywords--container {
        position: relative;
        width: 69%;
        min-width: 1025px;

        @media screen and (max-width: 1440px) {
          width: 100%;
        }
        @include media-bp-down(lg) {
          min-width: unset;
        }

        @media screen and (max-width: 420px) {
          height: 330px;
        }

        .halo {
          position: absolute;
          width: 100%;
          height: 150%;
          background: radial-gradient(
            50% 50% at 50% 50%,
            #43f2f3 0%,
            rgba(67, 242, 243, 0) 100%
          );
          opacity: 0.1;

          @include media-bp-down(lg) {
            width: 30%;
            left: 35%;
            height: 100%;
          }
        }

        .keywords {
          display: flex;
          justify-content: space-between;

          @include media-bp-down(lg) {
            flex-direction: column;
            align-items: center;
            gap: 16px;
          }

          @media screen and (max-width: 420px) {
            height: 100%;
          }

          .keyword {
            font-size: 40px;
            font-weight: 700;
            line-height: 150%;
            margin: 0 25px;

            &.share {
              color: #006796;
            }

            &.benefit {
              color: #008fad;
            }

            &.interact {
              color: #00b6b7;
            }

            &.build {
              color: #43f2f3;
            }

            &.mainKeyword {
              color: #ffffff;
            }
          }
        }
      }
    }

    .dg__landscape {
      margin: 147px auto 0;
      text-align: center;
      @include media-bp-down(lg) {
        margin-top: 60px;
      }

      .dg__landscape__introduction {
        max-width: 832px;
        font-size: 25px;
        line-height: 1.5;
        font-weight: 600;
        margin: 30px auto;

        @include media-bp-down(lg) {
          max-width: 650px;
          font-size: 20px;
          margin-top: 24px;
        }
      }

      .dg__landscape__cards {
        margin: 100px auto;
        padding: 0 30px;
        display: grid;
        grid-auto-flow: column;
        column-gap: 30px;
        max-width: 1386px;

        @include media-bp-down(xxxl) {
          column-gap: 15px;
        }
        @include media-bp-down(xxl) {
          grid-template-columns: auto auto;
          grid-template-rows: auto auto;
          column-gap: 0px;
          row-gap: 60px;
        }

        @include media-bp-down(lg) {
          margin: 100px auto 0;
          padding: 0 15px;
          grid-auto-flow: row;
          grid-template-columns: auto;
          grid-template-rows: repeat(4, row);
        }

        .dg__landscape__cards__item {
          margin: auto;
          width: 324px;
          height: 441px;
          padding: 20px 25px 25px;
          @include media-bp-down(lg) {
            max-width: 354px;
            height: 351px;
            width: auto;
          }
          border-radius: 20px;
          background: linear-gradient(
            222.68deg,
            #f9f9f9 13.75%,
            #d9e3ff 76.51%
          );
          display: grid;

          .dg__landscape__cards__item__image {
            justify-self: start;
            animation: floating-image 8s linear infinite;
          }

          .dg__landscape__cards__item__text {
            align-self: flex-end;
          }

          .title,
          .text {
            color: $textblue;
            text-align: left;
            line-height: 33px;
          }

          .title {
            font-size: 25px;
            font-weight: 600;
            margin-bottom: 15px;
            @include media-bp-down(lg) {
              line-height: 1.3;
            }
          }

          .text {
            font-size: 18px;
            font-weight: 400;
            @include media-bp-down(lg) {
              line-height: 1.5;
            }
          }
        }
      }
    }

    .dg__protocol {
      position: relative;
      margin: 0 auto 100px;
      max-width: 1329px;
      max-height: 1037px;
      min-height: 929px;
      display: flex;
      flex-direction: column-reverse;
      height: 100%;
      width: 100%;
      justify-content: flex-end;

      @include media-bp-down(xl) {
        min-height: 830px;
      }
      @include media-bp-down(md) {
        min-height: 630px;
        padding: 0;
        margin-bottom: 30px;
      }

      .dg__protocol__cards--container {
        position: absolute;
        padding: 0 60px;
        width: inherit;

        @include media-bp-down(lg) {
          overflow-x: auto;
          white-space: nowrap;
        }

        .dg__protocol__cards {
          margin: 0 auto;
          display: grid;
          grid-auto-flow: column;
          z-index: 4;

          @include media-bp-down(lg) {
            padding: 100px 0;
          }

          @include media-bp-up(lg) {
            &:hover .dg__protocol__card {
              opacity: 0.2;
            }
          }

          .dg__protocol__card {
            margin: 0 5px;
            max-height: 185px;
            max-width: 120px;

            &:hover {
              opacity: 1;
            }

            $min-angle: -8;
            $max-angle: 8;
            $nb-element: 9;
            $alpha: 240;
            $step: math.div($max-angle - $min-angle, $nb-element - 1);
            $middle: math.div($nb-element - 1, 2);

            @for $i from 0 through $nb-element - 1 {
              $angle: calc($min-angle + ($i * $step));
              $angle-in-rad: calc($angle * math.$pi / 180);

              &.offset-#{$i} {
                margin-top: #{14 * math.abs($i - $middle)}px;
                rotate: #{$angle}deg;
                transform-origin: 50% bottom;
              }
            }

            @include media-bp-down(lg) {
              height: 185px;
              width: 120px;
            }
          }
        }
      }

      .dg__protocol__book--container {
        display: flex;
        width: 100%;

        @include media-bp-down(lg) {
          top: 0;
          bottom: 0;
          width: 100%;
        }

        .dg__protocol__book {
          position: relative;
          display: flex;
          width: 100%;

          @include media-bp-down(lg) {
            display: block;
            min-height: 278px;
            height: 100%;
            width: 100%;
            padding: 185px 0 0;
            margin-top: 240px;
          }
          @include media-bp-down(md) {
            margin-top: 275px;
          }

          .dg__protocol__book--element {
            position: absolute;

            @include media-bp-down(lg) {
              max-height: 100%;
              bottom: 0;
            }
          }
          .page {
            animation: floating-image 8s linear infinite;
          }

          .page1 {
            animation-delay: 4s;
          }

          .page2 {
            animation-delay: 1.5s;
            animation-direction: reverse;
          }

          .page3 {
            animation-delay: 2s;
          }

          .page4 {
            animation-duration: 4s;
          }
        }
      }
    }
  }
}

